# partC_Dissertation

./: .gitignore  Re: Meeting for Dissertation (W7 or W8) - Dr Rafael Bailo <bailo@maths.ox.ac.uk> - 2022-11-24 1618.eml  ds.tex
Lab/FunctionMinimization/cuda/: CMakeLists.txt
Lab/FunctionMinimization/cuda/src/: curve.cu  curve.hpp  curverepulsion.cu  curverepulsion.hpp  export.cu  export.hpp
Lab/FunctionMinimization/cuda/src/FourierSeriesCurveRepulsion/: fourier-series-curve-repulsion-example-1.cu  fourier-series-curve-repulsion-example-2.cu
Lab/FunctionMinimization/cuda/test/: CMakeLists.txt  cuCrossTest.cu  cuCurveTest.cu  exportTest.cu
Lab/FunctionMinimization/matlab/: chebyshevRepulsion.m  interpolateAtChebpts.m  tangentPointEnergy.m  tangentPointEnergyGradient.m  tangentPointEnergySummand.m
Lab/FunctionMinimization/python/: curve_energy.py  curve_optimization_sdm_separate.ipynb  json_to_3D_anim.py  optimization_test.ipynb  optimizer.py
Lab/PDE/: H1.py  L2.py  heatEquation.py
Lab/PDE/Dirichlet Energy/: H-1.py  H1.py  H2_Consistency.nb  L2.py
Lab/PDE/Dirichlet Energy/H-1/: H-1.py
Lab/PDE/Dirichlet Energy/H2/: H2.py
Lab/PDE/Dirichlet Energy/L2/: CMakeLists.txt  L2.py
Lab/PDE/Dirichlet Energy/L2/src/: L2.cpp  plotter.cpp  plotter.hpp  solvers.cpp  solvers.hpp
Lab/PDE/Dirichlet Energy/cpp/: CMakeLists.txt  json_plot.py
Lab/PDE/Dirichlet Energy/cpp/src/: solver.cpp  solver.hpp
Lab/PDE/Dirichlet Energy/cpp/src/H-1/: H-1.cpp
Lab/PDE/Dirichlet Energy/cpp/src/H1/: H1.cpp
Lab/PDE/Dirichlet Energy/cpp/src/L2/: CMakeLists.txt  L2.cpp  L2.hpp  params.hpp  solvers.cpp  solvers.hpp
Lab/PDE/Dirichlet Energy/cpp/src/L2/src/: L2.cpp
Lab/PDE/cpp/: CMakeLists.txt  energy_to_plot.py  json_plot.py  json_to_2D_anim.py  json_to_3D_anim.py  matplot_pngs_to_mp4.py
Lab/PDE/cpp/src/: export.cpp  export.hpp  geometric-objects.cpp  geometric-objects.hpp  math-objects.cpp  math-objects.hpp  solver.cpp  solver.hpp
Lab/PDE/cpp/src/Curve-Repulsion/: curve-repulsion-1.cpp  curve-repulsion-1.hpp  curve-repulsion-circle.cpp  curve-repulsion-diamond.cpp  discrete-kernel.cpp  discrete-kernel.hpp
Lab/PDE/cpp/src/H-1/: H-1.cpp  H-1.hpp
Lab/PDE/cpp/src/H1/: H1.cpp  H1.hpp
Lab/PDE/cpp/src/L2/: L2.cpp
Lab/PDE/cpp/src/Porous-Medium/: porous.cpp  porous.hpp
Lab/PDE/cpp/test/: CMakeLists.txt  diamond-gradient-flow-test.cpp  energy-test.cpp  matrix-test.cpp  norm-test.cpp
Lab/PDE/cuda/: CMakeLists.txt  Makefile  json_to_2D_anim.py  json_to_3D_anim.py  json_to_3d_anim.ipynb
Lab/PDE/cuda/src/: export.cu  export.hpp  geometric-objects.cu  geometric-objects.h  geometric-objects.hpp  solver.cu  solver.hpp
Lab/PDE/cuda/src/Curve-Repulsion/: curve-repulsion-1.cu  curve-repulsion-1.hpp  curve-repulsion-circle.cu  curve-repulsion-fourier.cu  curve-repulsion-simple-2-circle.cu  curve-repulsion-simple-circle.cu  curve-repulsion-simple-fourier.cu  curve-repulsion-tangent-minimal-circle.cu
Lab/PDE/cuda/test/: CMakeLists.txt  crossTest.cu  cuCurveTest.cu  jsonExportTest.cu  sumArrayTest.cu
Lab/PDE/python/Curve-Repulsion/: curve_repulsion_1.py  discrete_kernel.py  energy_reference_value.ipynb
Lab/PDE/python/Dirichlet Energy/H-1/: discrete.py
Lab/PDE/python/Dirichlet Energy/H1/: H1.py
Lab/PDE/python/SimpleCurveEnergy/: curve_repulsion.ipynb  json_to_3D_anim.py
Lab/PDE/python/u_t u2xx/: nonlinear_u_t_u2_xx.py
Lab/PDE/u_t u2xx/: discrete.py  nonlinear_u_t_u2_xx.py
Notes/: Buck-Orloff-Circle.tex  Dirichlet_Energy.tex  ideas.txt
Notes/TexNotes/: Dirichlet_Energy.tex  utu2xx.tex
Notes/TexNotes/ChebyshevSeriesCurveRepulsion/: ChebyshevSeriesCurveRepulsion.tex
Notes/TexNotes/CircleTangentPointEnergy/: circle-tangent-point-energy.tex
Notes/TexNotes/CurveRepulsion1/: CurveRepulsion1.tex  EnergyDerivative.tex  gradient_tangent_point.ipynb
Notes/TexNotes/Dirichlet_Energy/: Dirichlet_Energy.tex
Notes/TexNotes/FourierSeriesCurveRepulsion/: FourierSeriesCurveRepulsion.tex
Notes/TexNotes/FunctionSpaces/: CurveDifferential.tex  FunctionSpaces.tex
Notes/TexNotes/Porous_Medium_Equation/: Porous_Medium_Equation.tex
Notes/TexNotes/SimpleEnergy/: SimpleEnergy.tex
Release/GFE/cuda/: CMakeLists.txt  json_to_2D_anim.py  json_to_3D_anim.py
Release/GFE/cuda/src/: constraint.cu  constraint.cuh  export.cu  export.cuh  solver.cu  solver.cuh  tpe.cu  tpe.cuh  vector.cu  vector.cuh
Release/GFE/cuda/src/demos/: figure8.cu  figure8.cuh  trefoil.cu
Release/GFE/cuda/test/: CMakeLists.txt  accessTest.cu  addTest.cu  dEnergyTest.cu  dTPETest.cu  derivativeIndexTest.cu  flushToVectorTest.cu  kernelalphabetaTest.cu  loadTest.cu  scratchTest.cu  vectorFromTensorTest.cu  vectorTest.cu
Resources/: links_for_desperate_times.txt
dissertation/: .vimrc  bibliography.bib  dissertation.tex  wordcount.sh
dissertation/sections/: FourierSeries.tex  Membrane.tex  abstract.tex  analyticalDerivativeOfTangentPointEnergy.tex  conclusion.tex  cover.tex  finiteDifference.tex  functionalGradient.tex  gradientFlow.tex  ibp.tex  innerProductSpaces.tex  introduction.tex  otherHomeomorphism.tex  preamble.tex  tangentPointEnergy.tex  unknottingCurve.tex
dissertation/sections/FourierSeriesImgs/: figure8_evolution_graphics.ipynb  multidim.ipynb  samplepoint.ipynb
dissertation/sections/MembraneImgs/: membrane.ipynb
dissertation/sections/conclusionImgs/: FourierEnergies.json  H1Energies.json  L2Energies.json  curve.py  energyProgress.ipynb  failure.ipynb  quadrature4.py
dissertation/sections/discretizationImgs/: discretization.ipynb
dissertation/sections/gradientFlowImgs/: gradientflow.ipynb
dissertation/sections/otherHomeomorphismImgs/: homeomorphism.ipynb
dissertation/sections/tangentPointEnergyImgs/: kernelHeatMap.nb  tangentPointEnergy.ipynb
dissertation/sections/unknottingCurveImgs/: curve.py  polygonalCurve.ipynb  quadrature4.py  scaleVariantCurve.ipynb  tangentPointEnergy.py
dissertation/sections/unknottingCurveImgs/CurveFlow/: H1Repulsion.ipynb  L2Repulsion.ipynb  curve.py  curveUntanglingProcessDerivative.ipynb
presentation/: bibliography.bib  presentation.tex
(+10 files in other folders)
