cmake_minimum_required(VERSION 3.25.1)

project(tests)

add_library(MathObjectsLib STATIC ../src/math-objects.cpp)
add_library(GeometricObjectsLib STATIC ../src/geometric-objects.cpp)
add_library(SolverLib STATIC ../src/solver.cpp)
add_executable(matrix-test matrix-test.cpp)
target_link_libraries(matrix-test MathObjectsLib)
add_executable(norm-test norm-test.cpp)
target_link_libraries(norm-test MathObjectsLib)
add_executable(energy-test energy-test.cpp)
target_link_libraries(energy-test MathObjectsLib GeometricObjectsLib SolverLib)
add_executable(diamond-gradient-flow-test diamond-gradient-flow-test.cpp)
target_link_libraries(diamond-gradient-flow-test MathObjectsLib GeometricObjectsLib SolverLib)
